# tetra3rs

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  download_hip2.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  release.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
api/calibrate-result/: index.html
api/camera-model/: index.html
api/distortion/: index.html
api/extraction/: index.html
api/functions/: index.html
api/solve-result/: index.html
api/solver-database/: index.html
benches/: extract.rs
concepts/aberration/: index.html
concepts/algorithm/: index.html
concepts/camera-model/: index.html
concepts/centroid-extraction/: index.html
concepts/coordinates/: index.html
concepts/wcs/: index.html
docs/: CNAME  index.md  requirements.txt
docs/api/: calibrate-result.md  camera-model.md  distortion.md  extraction.md  functions.md  index.md  solve-result.md  solver-database.md
docs/concepts/: aberration.md  algorithm.md  camera-model.md  centroid-extraction.md  coordinates.md  tracking.md  wcs.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/tutorials/: basic-solve.ipynb  index.md  multi-image-calibration.ipynb
getting-started/installation/: index.html
getting-started/quickstart/: index.html
python/: Cargo.toml  build.rs
python/src/: calibrate.rs  camera_model.rs  catalog_star.rs  centroid.rs  distortion.rs  extraction.rs  helpers.rs  lib.rs  solve_result.rs  solver_database.rs
python/tests/: conftest.py  test_basic.py  test_skyview.py  test_solve.py  test_tess.py
python/tetra3rs/: __init__.py  __init__.pyi
scripts/: check-notebook-outputs.py  download_gaia_catalog.py  download_hip2.sh
search/: search_index.json
src/: aberration.rs  camera_model.rs  centroid.rs  centroid_extraction.rs  error.rs  lib.rs  rkyv_nalgebra.rs  rkyv_numeris.rs  star.rs  starcatalog.rs
src/catalogs/: gaia.rs  hipparcos.rs  mod.rs
src/distortion/: calibrate.rs  fit.rs  mod.rs  polynomial.rs  radial.rs
src/solver/: combinations.rs  database.rs  mod.rs  pattern.rs  solve.rs  track.rs  wcs_refine.rs
tests/: ab_extraction.rs  integration_test.rs  skyview_solve_test.rs  tess_solve_test.rs  test_data.rs
tutorials/: index.html
