[workspace]
members = [".", "python"]

[package]
keywords = [
    "star-plate-solver",
    "astrometry",
    "astronomy",
    "image-processing",
    "pattern-recognition",
]
name = "tetra3"
version = "0.7.1"
edition = "2021"
description = "Rust implementation of Tetra3: Fast and robust star plate solver"
readme = "README.md"
license = "MIT AND Apache-2.0"
homepage = "https://tetra3rs.dev"
repository = "https://github.com/ssmichael1/tetra3rs"
categories = ["aerospace", "algorithms", "mathematics", "science"]
exclude = ["data/", "download_hip2.sh"]

[lib]
name = "tetra3"

[dependencies]
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tracing = { version = "0.1.40", features = ["std"] }
numeris = { version = "0.5.11", features = ["std", "serde", "optim"] }
image = { version = "0.25", optional = true, default-features = false }

[features]
default = []
hipparcos = []
# Centroid extraction also pulls in numeris's imageproc (used for CCL).
image = ["dep:image", "numeris/imageproc"]

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dev-dependencies]
rand = "0.10.0"
rand_distr = "0.6.0"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
ureq = "3"

# integration tests use centroid extraction which needs the "image" feature
# The test itself reads FITS files directly (minimal parser in-test)
[[test]]
name = "skyview_solve_test"
path = "tests/skyview_solve_test.rs"
required-features = ["image"]

[[test]]
name = "tess_solve_test"
path = "tests/tess_solve_test.rs"
required-features = ["image"]
