[build-system]
requires = ["setuptools>=68.0", "setuptools-rust>=1.10"]
build-backend = "setuptools.build_meta"

[project]
name = "tetra3rs"
version = "0.6.1"
description = "Fast star plate solver written in Rust"
requires-python = ">=3.10"
dependencies = ["numpy", "gaia-catalog<1.0"]
authors = [{ name = "Steven Michael" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/ssmichael1/tetra3rs"
Repository = "https://github.com/ssmichael1/tetra3rs"

[tool.setuptools.packages.find]
where = ["python"]
include = ["tetra3rs*"]

[tool.setuptools.package-data]
tetra3rs = ["py.typed", "*.pyi"]

[[tool.setuptools-rust.ext-modules]]
target = "tetra3rs/tetra3rs"
path = "python/Cargo.toml"
binding = "PyO3"
debug = false

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_* pp*"
test-command = "python -c \"import tetra3rs; print(tetra3rs.__name__)\""

[tool.cibuildwheel.linux]
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- -y"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
before-all = ""

[tool.cibuildwheel.windows]
before-all = ""
