[package]
name = "tetra3-python"
version = "0.7.1"
edition = "2021"
publish = false

[lib]
name = "tetra3rs"
crate-type = ["cdylib"]

[dependencies]
tetra3 = { path = "..", features = ["image"] }
pyo3 = { version = "0.28.1", features = ["extension-module"] }
numpy = "0.28.0"
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
numeris = { version = "0.5.10", features = ["std"] }

[build-dependencies]
pyo3-build-config = "0.28.1"
